--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -229,7 +229,56 @@ Nyní by čtenář měl mít hrubý přehled o celkovém vnitřním fungování 
 
 \subsection{Kolize mečů} \label{swordCollisionsSection}
 \begin{itemize}
-  \item 
+  \item \textbf{nejprve uvést do problematiky}
+  \begin{itemize}
+    \item fyzikální update běží ve fixně dlouhých krocích
+    \item diskrétní detekce kolizí - každý update se jenom koukne jestli collidery vzájemně prochází skrz sebe - když jo, nahlásí kolizi a aplikuje síly aby kolizi vyřešila (podle rychlostí co maj kolidující objekty v daném kroku)
+    \item problém - tunelování - tzn. když objekt A letí směrem k objektu B - buď A se pohybuje hodně rychle NEBO B je hodně malý -> stane se, že v 1 snímku ja A na jedné straně objektu B a v druhém už je na druhé straně objektu B - projde skrz, žádná kolize není zdetekována
+    \item herní obor kterému tohle nejvíc vadí - \acs{FPS} - potřebují aby letící kulky netunelovaly skrz zdi nebo skrz člověka kterého mají trefit
+    \item řešení - spojitá detekce kolizí (continuous collision detection) - podle složitejch fyzikálních vzorečků počítá dráhu objektu v průběhu času mezi snímkama (-> pomalejší než diskrétní, ale kulky s ní netunelujou)
+    \item Unity physics spojitou detekci kolizí podporují
+  \end{itemize}
+  \item \textbf{vysvětlit problém}
+  \begin{itemize}
+    \item meče... relativně dost malé objekty, pohybují se celkem rychle
+    \item -> při diskrétní detekci kolizí často tunelují
+    \item řešení: použít spojitou detekci kolizí - \textbf{NEFUNGUJE!}
+    \item problém: podle Unity docs... continuous dynamic collision detection bere v úvahu jenom lineární rychlost, \textbf{úhlovou ignoruje} X náš meč se pohybuje především rotačně (je vidět že vážně je koncipovaná především pro letící střely v \acs{FPS} hrách a k ničemu moc dalšímu)
+    \item chování spojité detekce v praxi... zdetekuje kolizi celkem dost často v porovnání s tou diskrétní, ale i tak se tunelování děje. taky i když kolizi zdetekuje korektně, většinou nezdetekuje korektně síly - meče často při kolizi tak jako podivně zamrznou 
+    \item poslední možná záchrana... \textbf{continuous speculative collision detection} - poslední možnost, kterou Unity nabízí; podle dokumentace by měla brát v úvahu i úhlovou rychlost, jenom tam údajně můžou vznikat ghost kolize
+    \item v praxi se ale continuous speculative zdá trpět na tunelování ne o moc líp než diskrétní 
+  \end{itemize}
+  
+  \item \textbf{úvaha - možnosti jak řešit:}
+  \begin{itemize}
+    \item v každém framu pro všechny meče checkovat jestli třeba náhodou neprošly skrz a když jo, tak zařídit aby se vrátily
+      \begin{itemize}
+        \item když uděláme chytře, dalo by se naimplementovat efektivněji než jak to zní (checkovat jenom s mečema v okolí - co jsou v trigger collideru apod.)
+        \item jak chceme tu kolizi ručně rozřešit, aby se meče chovaly pěkně realisticky a nerozbila se celková stabilita simulace? - jenom vrátit rigidbody.position na poslední pozici před kolizí se nebude chovat pěkně
+      \end{itemize}
+    \item drobný skript co poslouchá na kolize a vrací meče na správnou stranu
+      \begin{itemize}
+        \item pozorování - ve skutečnosti se zpravidla neděje to, že by meče vzájemně protunelovaly úplně bez kolize - kolize je zaznamenána, ale je rozřešena špatně - tak, že meče pošle skrz (to nejspíš i bude důvod proč tuneluje continuous speculative)
+        \item myšlenka: když na meči zaznamenáme kolizi, podívat se jakou silou byla rozřešena, a když poslala meče skrz, zvrátit to
+        \item problém - callback parametr co dostaneme reportuje o trochu jinou sílu než kterou ve skutečnosti fyzikální systém aplikoval
+        \item porovnáním směru kolizní normály a resolvovací síly se dá většinou vydedukovat že procházíme skrz
+        \item máme víc informací pro korektní rozřešení kolize než v předchozí možnosti
+        \item ALE I TAK - jakou sílu máme zapůsobit aby se pohyb meče zvrátil? - prostě odečíst 2*collision.impact nefunguje - o dost jiná síla než co byla meči dodána kolizí - i kdyby mečům zabránilo projít skrz, budou se pak při kolizích divně klepat apod.
+        \item když bychom např. při takové kolizi vraceli transform.position meče na poslední pozici, co měl před kolizí, bude to fyzikálně nerealistické chování, ohrozíme stabilitu simulace apod.
+        \item nemusí podchytit všechno tunelování, celkově to není robustní řešení
+      \end{itemize}
+    \item přidat velký neviditelný collider co meči zabrání projít skrz
+      \begin{itemize}
+        \item detekci kolize i vypočítání síly pro její rozřešení za nás zvládne udělat fyzikální subsystém
+        \item jediné, co musíme udělat, je zařídit, aby ten collider vždycky směřoval správně proti druhému meči
+        \item taky potřeba zařídit, aby ten collider nekolidoval s ničím s čím nemá
+      \end{itemize}
+  \end{itemize}
+  \textbf{po troše experimentování a delší úvaze jsme se rozhodli pro možnost s dodatečným neviditelným colliderem}
+  \item \textbf{průběh implementace:}
+  \begin{itemize}
+    \item 
+  \end{itemize}
 \end{itemize}
 
 
